<resources>
    <string name="app_name">Moul Social</string>
    <string name="google_web_client_id">641100524148-su99fri3ah6no8vrl9mjopf7o5tq2c7f.apps.googleusercontent.com</string>
    <string name="github_client_id">Ov23liNZ8b53Kd6qf3kD</string>
    <string name="github_client_secret">d7ac5d0423bb7ffb6f0e63efe39fe0a41e1aeb20</string>
    <string name="github_redirect_uri">https://moulsocial.firebaseapp.com/__/auth/handler</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_image">Profile Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whats_on_your_mind">What\'s on your mind?</string>
    <string name="username">Username</string>
    <string name="post_time">Just now</string>
    <string name="post_content">This is a sample post content</string>
    <string name="post_image">Post Image</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="search_hint">Search</string>
    <string name="search_icon_desc">Search icon</string>
    <string name="profile_image_desc">Profile image</string>
    <string name="notifications">Notifications</string>
    <string name="notification_icon_desc">Notification icon</string>
    <string name="add_friend">Add Friend</string>
    <string name="follow">Follow</string>
    <string name="post_image_desc">Post image</string>
    <string name="time">Time</string>
    <string name="this_is_the_post_content">This is the post content.</string>
    <string name="basic_info_here">Basic info here</string>
    <string name="comments">Comments</string>
    <string name="write_a_comment">Write a comment…</string>
    <string name="post">Post</string>
    <string name="photo">Photo</string>
    <string name="cover_photo">cove photo</string>
    <string name="profile_picture">profile picture</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="submit">Submit</string>
    <string name="friend_name">Friend Name</string>
    <string name="notification">Notification</string>
    <string name="nh_p_b_nh_lu_n_t_i_y">Nhập bình luận tại đây!!</string>
    <string name="g_i">Gửi</string>
    <string name="b_n_ang_ngh_g">Bạn đang nghĩ gì ?</string>
    <string name="h_nh_nh">Hình Ảnh</string>
    <string name="ng">Đăng</string>
    <string name="enter_name" />
    <string name="save_name">\n Save</string>
    <string name="selected_image_preview">selected image preview</string>
    <string name="user_email">email here\n</string>

    <!-- Add plurals here -->
    <plurals name="like_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
</resources>
